Refs #120538 - Add default collection where to store new citations

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,10 @@
 Changelog
 =========
 
-1.1-dev0 - (unreleased)
+1.1 - (2020-09-30)
 ---------------------------
+* Add default collection where to store new citations
+  [@avoinea refs #120538]
 
 1.0 - (2020-09-01)
 -----------------------
