--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 1.3-dev0 - (unreleased)
 ---------------------------
+* Change: Plone4 support
+  [avoinea refs #120538]
 
 1.2 - (2020-10-05)
 ---------------------------
